# restflow

./: .gitignore  ARCHITECTURE_IMPLEMENTATION.md  FILTER_BUG_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_V1_SUMMARY.md  PLAN.md  README.md  TABLE_API_FIX.md  TASKNODE_FIXES.md  TASKNODE_V2_SUMMARY.md  TESTING_GUIDE.md  architecture_idea.md  bunup.config.ts  idea.md  index.html  package.json  todo.md  tsconfig.json
.github/: copilot-instructions.md
.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
backend/: README.md  dev.db  pyproject.toml  requirements.txt  run.bat  test_e2e_filter.ps1  test_filter.ps1  test_filter_direct.py
backend/Draft/: ingest.py
backend/app/: __init__.py  database_models.py  db.py  executors.py  main.py  models.py  session.py  tools.py
backend/sampledata/: water_lines_fixed.gpkg  water_points_fixed.gpkg
pages/: _app.tsx  index.tsx
src/: App.tsx  main.tsx  styles.css
src/atoms/: engineAtom.ts  sessionAtom.ts
src/components/: Layout.tsx  SideMenu.tsx  SideMenuIcon.tsx  WorkflowCanvas.tsx
src/components/FileBrowser/: FileBrowserDialog.tsx
src/components/MapPanel/: LeftStack.tsx  MapEngine.tsx  RightBar.tsx  SideStack.tsx  ZoomControl.tsx  index.tsx
src/components/Poppable/: OverlayHost.tsx  Poppable.tsx
src/components/TopBar/: TopBar.tsx
src/components/WorkflowPanel/: SideStack.tsx  TaskNode.tsx  TaskNodeOld.tsx  (+2 more)
src/lib/: api.ts
(+145 files in other folders)
