[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "python-multipart>=0.0.20",
    "restgdf",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.sources]
restgdf = { git = "https://github.com/jojo0094/restGDF" }
