[project]
name = "backend"
version = "0.1.0"
description = "restFlow backend with workflow orchestration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "python-multipart>=0.0.20",
    "restgdf",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "geopandas>=1.0.0",
]

[tool.uv.sources]
restgdf = { git = "https://github.com/jojo0094/restGDF" }
